<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/icon_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/icon_filter"
        android:title="@string/filter"
        app:showAsAction="ifRoom|collapseActionView">
            <menu>
                <item
                    android:id="@+id/action_filter_everything"
                    android:title="@string/everything"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/action_filter_talks"
                    android:title="@string/talks"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/action_filter_workshops"
                    android:title="@string/workshops"
                    app:showAsAction="never" />
            </menu>
    </item>
</menu>