...
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtSessionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{session.title}"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textSize="32sp"
                tools:text="Welcome/Introduction" />
...
                    android:textAppearance="@android:style/TextAppearance.Material.Subhead"
                    app:goneUnless="@{!session.speakerId.isEmpty()}"
                    tools:text=" • "
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/txtSessionType"
                    sessionTypeText="@{session.sessionType}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Subhead"
                    tools:text="Talk" />
...
